@@ -1,5 +1,7 @@
 package edu.hotel.booking.service;
 
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import edu.hotel.booking.dto.roomtype.RoomTypeRequest;
 import edu.hotel.booking.dto.roomtype.RoomTypeResponse;
 import edu.hotel.booking.dto.tariff.TariffRequest;
@@ -15,9 +17,13 @@ import edu.hotel.booking.repository.RoomTypeRepository;
 import edu.hotel.booking.repository.TariffRepository;
 import edu.hotel.common.exception.NotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.Duration;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -35,20 +41,38 @@ public class RoomTypeServiceImpl implements RoomTypeService {
 
     private final RoomRepository roomRepository;
 
+    private final RedisTemplate<String, Object> redisTemplate;
+
+    private final ObjectMapper objectMapper;
+
     @Override
     @Transactional(readOnly = true)
+
     public List<RoomTypeResponse> findAvailableRoomTypes(
             Long hotelId, LocalDate checkIn, LocalDate checkOut) {
 
+        String cacheKey = "availability:" + hotelId + "_" + checkIn + "_" + checkOut;
+        String indexKey = "availability:keys:" + hotelId;
+
+        Object cached = redisTemplate.opsForValue().get(cacheKey);
+        if (cached != null) {
+            return objectMapper.convertValue(cached, new TypeReference<List<RoomTypeResponse>>() {});
+        }
+
         List<RoomType> roomTypes = roomTypeRepository.findWithTariffsByHotelId(hotelId);
 
-        return roomTypes.stream()
+        List<RoomTypeResponse> result = roomTypes.stream()
                 .filter(roomType -> roomRepository
                         .findFirstAvailableRoom(roomType.getId(), checkIn, checkOut)
                         .isPresent())
                 .map(roomTypeMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
 
+        redisTemplate.opsForValue().set(cacheKey, result, Duration.ofMinutes(1));
+        redisTemplate.opsForSet().add(indexKey, cacheKey);
+        redisTemplate.expire(indexKey, Duration.ofMinutes(1));
+
+        return result;
     }
 
     @Override
@@ -65,6 +89,7 @@ public class RoomTypeServiceImpl implements RoomTypeService {
 
     @Override
     @Transactional
+    @CacheEvict(value = "tariffs", key = "#id")
     public TariffResponse createTariff(Long id, TariffRequest request) {
         RoomType roomType = roomTypeRepository.findById(id)
                 .orElseThrow(() -> new NotFoundException("Тип номера с id " + id + " не найден"));
@@ -76,6 +101,7 @@ public class RoomTypeServiceImpl implements RoomTypeService {
     }
 
     @Override
+    @Cacheable(value = "tariffs", key = "#id")
     @Transactional(readOnly = true)
     public List<TariffResponse> getActualTariffs(Long roomTypeId) {
         roomTypeRepository.findById(roomTypeId)
